# mashes

./: .tags  README.md
calibration/src/: Mashes_calibration.py  homography.py  tcp_to_cam.py  utils.py
mashes/: CMakeLists.txt  package.xml
mashes_calibration/: CMakeLists.txt  package.xml  setup.py
mashes_calibration/config/: NIT_config.yaml  tachyon.yaml  tachyon_NO.yaml  uEye_config.yaml
mashes_calibration/data/: pattern.odg  pose0001.txt  pose0002.txt  pose0003.txt  pose0004.txt  pose0005.txt  pose0006.txt  pose0007.txt
mashes_calibration/data/TCP_calibration/: XY_center.ods  XY_center.txt
mashes_calibration/data/calibration/jas/: calib.jas
mashes_calibration/launch/: calibration.launch  mashes_calibration.launch
mashes_calibration/scripts/: bisector.py  nd_Capture.py  nd_GUI.py  nd_viewer.py  scaleCamera.py  transformations.py  translation.py  utils.py
mashes_calibration/src/: XY_center.ods  project.py
mashes_calibration/src/Camera calibration/: angle.py  calibration_camera.py  exe_calibration.py  homography.py  represent.py  translation.py
mashes_calibration/src/TCP calibration/: TCP_calibration.py  utils.py
mashes_calibration/src/calibration/: TCP_calibration.py  angle.py  calibration.py  homography.py  represent.py  tcp.py  tcp_to_cam.py  test.txt  translation.py  utils.py
mashes_calibration/src/visualize/: Scale_gui.ui
mashes_control/: CMakeLists.txt  README.md  package.xml
mashes_control/config/: control.yaml
mashes_control/launch/: control.launch
mashes_control/msg/: MsgControl.msg  MsgModo.msg
mashes_control/resources/: control.ui  gui_celd.ui
mashes_control/scripts/: PubSubControl.py  PubSubGUI.py  nd_control.py  qt_control.py
mashes_control/src/control/: control.py
mashes_control/src/gui/: gui_celd.py
mashes_labjack/: CMakeLists.txt  README.md  package.xml
mashes_labjack/config/: labjack.yml
mashes_labjack/launch/: labjack.launch
mashes_labjack/scripts/: SubLabjack.py  nd_labjack.py
mashes_labjack/src/labjack/: labjack.py
mashes_labjack/src/laser/: laser.py
mashes_measures/: CMakeLists.txt  README.md  package.xml  setup.py
mashes_measures/config/: _camera.yaml  _tachyon.yaml  camera.yaml  tachyon.yaml  tachyon_coolrate.yaml
mashes_measures/launch/: launch_test.launch  measures.launch
mashes_measures/msg/: MsgGeometry.msg  MsgMeasure.msg  MsgStatus.msg  MsgVelocity.msg
mashes_measures/resources/: measures.ui
mashes_measures/scripts/: PubGeometry.py  PubMeasure.py  PubPixelIntensity.py  PubVelocity.py  SubEllipseMethod.py  nd_coolrate.py  nd_geometry.py  nd_moments.py  nd_registration.py  nd_supervisor.py  nd_velocity.py  nd_viewer.py  nd_viewer_cameras.py  pub_measures.py  qt_display.py  qt_measures.py  qt_plot.py  viewer.py
mashes_measures/src/measures/: _geometry.py  calibration.py  coolrate.py  coolrate_offline.py  coolrate_point.py  coolrate_script.py  coolrate_script_v2.py  coolrate_script_v3.py  filter.py  geometry.py  homography.py  kdl.py  measures.py  moments.py  pixelIntensity.py  projection.py  projection_Noemi.py  registration.py  show3d.py  velocity.py
mashes_robviz/: CMakeLists.txt  package.xml
mashes_robviz/config/: params.yaml  workcell.rviz
mashes_robviz/launch/: robviz.launch
mashes_robviz/resources/: robviz.ui
mashes_robviz/scripts/: qt_control.py  qt_display.py  qt_measures.py  qt_param.py  qt_plot.py  robviz.py
mashes_tachyon/: CMakeLists.txt  package.xml  setup.py
mashes_tachyon/config/: tachyon.yml
mashes_tachyon/launch/: tachyon.launch
mashes_tachyon/msg/: MsgCalibrate.msg  MsgTemperature.msg
mashes_tachyon/scripts/: nd_tachyon.py  pub_tachyon.py
mashes_tachyon/src/tachyon/: nitdat.py  tachyon.py  tachyon.yml
mashes_ueye/: CMakeLists.txt  package.xml
mashes_ueye/launch/: ueye.launch
mashes_workcell/: CMakeLists.txt  package.xml
mashes_workcell/launch/: mashes_bagplay.launch  mashes_bagrecord.launch  mashes_dataset.launch  mashes_workcell.launch  workcell.launch
mashes_workcell/urdf/: workcell.urdf  workcell.xacro  wt03_head.xacro
